--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "moduleResolution": "NodeNext",
     "outDir": "./build",
     "esModuleInterop": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
