--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "module": "ESNext",
     "moduleResolution": "NodeNext",
     "outDir": "./build",
-    "esModuleInterop": true,
-    "noUnusedLocals": false,
+    "esModuleInterop": true,//true,
+    "noUnusedLocals": false,//true,
     "noUnusedParameters": false,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
