--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
     "module": "ESNext",
     "moduleResolution": "NodeNext",
     "outDir": "./build",
-    "esModuleInterop": true,//true,
-    "noUnusedLocals": false,//true,
-    "noUnusedParameters": false,
+    "esModuleInterop": true,
+    "noUnusedLocals": true,//true,
+    "noUnusedParameters": true,//true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "skipLibCheck": true//
+    "skipLibCheck": true
   }
 }
